# Fortuna

./: README.md  pyproject.toml  scripts.py
.github/workflows/: black.yml
fortuna/: app.py
fortuna/frames/: skat.py
tests/: test_fortuna.py  test_skat.py
