[tool.poetry]
name = "Fortuna"
version = "0.1.0"
description = ""
authors = ["Nate Ferreira <nferreira1729@gmail.com>"]

[tool.poetry.scripts]
test = 'scripts:test'

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
